fix: improve vertical spacing further for tags on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,7 @@ nav {
 .card-footer {
     /* Box Model */
     display: flex;
-    gap: 8px;
+    gap: 12px 8px;
     flex-wrap: wrap;
     margin-top: auto;
     padding-top: 24px
